--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,12 +76,9 @@ services:
         ports:
             - '${DB_FORWARD_PORT-33306}:3306'
         environment:
-            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ROOT_HOST: '%'
-            MYSQL_DATABASE: '${DB_DATABASE}'
-            MYSQL_USER: '${DB_USERNAME}'
-            MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ALLOW_EMPTY_PASSWORD: 1
+            MYSQL_ROOT_PASSWORD: 'password'
+            MYSQL_ROOT_HOST: "%"
+            MYSQL_DATABASE: 'smartmuni'
         healthcheck:
             test: ["CMD", "mysqladmin", "ping", "-p password"]
             retries: 3
