--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.7",
         "owenvoke/blade-fontawesome": "^2.3",
         "socialiteproviders/laravelpassport": "^4.3",
+        "spatie/laravel-permission": "^5.10",
         "spiral/roadrunner": "^2.12"
     },
     "require-dev": {
