--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "bezhansalleh/filament-shield": "^2.4",
         "doctrine/dbal": "^3.6",
         "filament/filament": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
