--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=smartmuni
 DB_USERNAME=root
-DB_PASSWORD=password
+DB_PASSWORD=''
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
