--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "bezhansalleh/filament-shield": "^2.4",
         "doctrine/dbal": "^3.6",
         "filament/filament": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "jeffgreco13/filament-breezy": "^1.5",
         "laravel/framework": "^10.10",
         "laravel/horizon": "^5.15",
         "laravel/octane": "^1.4",
@@ -16,6 +18,7 @@
         "laravel/tinker": "^2.7",
         "owenvoke/blade-fontawesome": "^2.3",
         "socialiteproviders/laravelpassport": "^4.3",
+        "spatie/laravel-permission": "^5.10",
         "spiral/roadrunner": "^2.12"
     },
     "require-dev": {
