Grafica pagos por mes

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "codeat3/blade-google-material-design-icons": "^1.18",
         "doctrine/dbal": "^3.6",
         "filament/filament": "^2.0",
+        "flowframe/laravel-trend": "^0.1.5",
         "guzzlehttp/guzzle": "^7.2",
         "jeffgreco13/filament-breezy": "^1.5",
         "laravel/framework": "^10.10",
@@ -22,6 +23,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "leandrocfe/filament-apex-charts": "^2.0",
+        "nesbot/carbon": "^2.71",
         "owenvoke/blade-fontawesome": "^2.3",
         "ryangjchandler/blade-tabler-icons": "^2.1",
         "socialiteproviders/laravelpassport": "^4.3",
