--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,10 @@
         "leandrocfe/filament-apex-charts": "^2.0",
         "nesbot/carbon": "^2.71",
         "owenvoke/blade-fontawesome": "^2.3",
+        "pxlrbt/filament-activity-log": "^0.1.3",
         "ryangjchandler/blade-tabler-icons": "^2.1",
         "socialiteproviders/laravelpassport": "^4.3",
+        "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-permission": "^5.10",
         "spiral/roadrunner": "^2.12"
     },
