install laravel excel

--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,12 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "leandrocfe/filament-apex-charts": "^2.0",
+        "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.71",
         "owenvoke/blade-fontawesome": "^2.3",
+        "psr/simple-cache": "^2.0",
+        "pxlrbt/filament-excel": "^1.1",
+        "pxlrbt/filament-spotlight": "^0.3.8",
         "ryangjchandler/blade-tabler-icons": "^2.1",
         "socialiteproviders/laravelpassport": "^4.3",
         "spatie/laravel-permission": "^5.10",
