--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
         "nesbot/carbon": "^2.71",
         "owenvoke/blade-fontawesome": "^2.3",
         "pxlrbt/filament-activity-log": "^0.1.3",
+        "pxlrbt/filament-excel": "^1.1",
+        "pxlrbt/filament-spotlight": "^0.3.8",
         "ryangjchandler/blade-tabler-icons": "^2.1",
         "socialiteproviders/laravelpassport": "^4.3",
         "spatie/laravel-activitylog": "^4.7",
