--- a/package.json
+++ b/package.json
@@ -16,5 +16,36 @@
         "tailwindcss": "^3.2.4",
         "tippy.js": "^6.3.7",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@simonwep/pickr": "^1.8.2",
+        "animate.css": "^4.1.1",
+        "aos": "^2.3.4",
+        "apexcharts": "^3.41.0",
+        "clipboard": "^2.0.11",
+        "dropzone": "^5.9.0",
+        "feather-icons": "^4.29.0",
+        "flatpickr": "^4.6.13",
+        "fullcalendar": "6.1.6",
+        "glightbox": "^3.2.0",
+        "gmaps": "^0.4.25",
+        "gridjs": "^5.1.0",
+        "inputmask": "^5.0.7",
+        "jsvectormap": "1.4.2",
+        "nice-select2": "^2.1.0",
+        "nouislider": "^15.6.1",
+        "plyr": "^3.7.8",
+        "prismjs": "^1.29.0",
+        "pristinejs": "^1.1.0",
+        "quill": "^1.3.7",
+        "rater-js": "^1.0.1",
+        "shepherd.js": "^11.0.1",
+        "shufflejs": "^6.1.0",
+        "simplebar": "^6.2.5",
+        "sortablejs": "^1.13.0",
+        "sweetalert2": "^11.5.1",
+        "swiper": "^8.4.4",
+        "tippy.js": "2.5.4",
+        "wnumb": "^1.2.0"
     }
 }
