install media library spatie

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "codeat3/blade-google-material-design-icons": "^1.18",
         "doctrine/dbal": "^3.6",
         "filament/filament": "^2.0",
+        "filament/spatie-laravel-media-library-plugin": "^2.0-stable",
         "flowframe/laravel-trend": "^0.1.5",
         "guzzlehttp/guzzle": "^7.2",
         "jeffgreco13/filament-breezy": "^1.5",
@@ -32,6 +33,7 @@
         "ryangjchandler/blade-tabler-icons": "^2.1",
         "socialiteproviders/laravelpassport": "^4.3",
         "spatie/laravel-activitylog": "^4.7",
+        "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.10",
         "spiral/roadrunner": "^2.12",
         "tapp/filament-authentication-log": "^2.0",
