--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@frostui/tailwindcss": "^0.1.5",
         "@simonwep/pickr": "^1.8.2",
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/typography": "^0.5.9",
         "animate.css": "^4.1.1",
         "aos": "^2.3.4",
         "apexcharts": "^3.41.0",
